--- a/View/Index/index.phtml
+++ b/View/Index/index.phtml
@@ -5,13 +5,19 @@
 <?php KumbiaPHP\View\View::content(true) ?>
 <?php KumbiaPHP\View\View::content(true) ?>
 <h2>Probando el Calendario</h2>
+<div class="k2_calendar_errors ui-state-error ui-corner-all"></div>
 <div id="calendario"></div>
-
 <script type="text/javascript">
     var module_url = "<?php echo KumbiaPHP\View\View::app()->createUrl('K2/Calendar:') ?>";
     $(function(){
         $("#calendario").fullCalendar({
-            events: <?php echo $events ?>,
+            events: function(start, end, callback){
+                console.log(start)
+                $.get(module_url + 'event',{
+                    start: start,
+                    end: end
+                }, callback, 'json')
+            },
             selectable: true,
             editable: true,
             select:function( startDate, endDate, allDay){
@@ -55,15 +61,17 @@
                 buttons:{
                     Guardar:function(){
                         var data = dialog.find('form:first').serialize()
-                        saveEvent(event, data)
-                        dialog.dialog('close')
+                        saveEvent(event, data, dialog, function(){
+                            dialog.dialog('close')                            
+                        })
                     },
                     Cancelar:function(){
                         dialog.dialog('close')
                     },
                     Remover:function(){
-                        deleteEvent(dialog.find('form:first #event_id').val())
-                        dialog.dialog('close')
+                        deleteEvent(dialog.find('form:first #event_id').val(), dialog, function(){
+                            dialog.dialog('close')                            
+                        })
                     }
                 },
                 close:function(){
@@ -78,7 +86,7 @@
         })
     }
     
-    function saveEvent(event, data)
+    function saveEvent(event, data, dialog, callbackSuccess)
     {
         $.post(module_url + 'event/save', data, function(json){
             if(null == event){ 
@@ -91,18 +99,57 @@
                 }
             }
             $("#calendario").fullCalendar(action, event)
+            if ($.isFunction(callbackSuccess)){
+                callbackSuccess()
+            }
         }, 'json').error(function(error){
-            console.log(error.responseText)
-            alert($.parseJSON(error.responseText).message)
+            if(null != dialog && undefined != dialog){
+                showErrors(dialog.find('.k2_calendar_errors'), error.responseText)
+            }else{
+                showErrors($('.k2_calendar_errors'), error.responseText)
+            }
         })
     }
     
-    function deleteEvent(id){
-        $.getJSON(module_url + 'event/remove/' + id,{}, function(json){
-            $("#calendario").fullCalendar('removeEvents', id)
-        }, 'json').error(function(error){
-            console.log(error.responseText)
-            alert($.parseJSON(error.responseText).message)
-        })
+    function deleteEvent(id, dialog, callbackSuccess){
+        if(0 != id.length){            
+            $.getJSON(module_url + 'event/remove/' + id,{}, function(json){
+                $("#calendario").fullCalendar('removeEvents', id)
+                if ($.isFunction(callbackSuccess)){
+                    callbackSuccess()
+                }
+            }, 'json').error(function(error){
+                if(null != dialog && undefined != dialog){
+                    showErrors(dialog.find('.k2_calendar_errors'), error.responseText)
+                }else{
+                    showErrors($('.k2_calendar_errors'), error.responseText)
+                }
+                
+            })
+        }else{
+            if ($.isFunction(callbackSuccess)){
+                callbackSuccess()
+            }        
+        }
+    }
+    
+    function showErrors(container, error)
+    {
+        var error = $.parseJSON(error)
+        var errors = [];
+        errors.push(error.message)
+        if(undefined != error.errors){           
+            for (e in error.errors){
+                errors.push(error.errors[e])
+            }
+        }
+        container.html('<p>' + errors.join('</p><p>') + '</p>').show(0).delay(5000).hide(0)
     }
 </script>
+<style>
+    .k2_calendar_form dd{margin: 10px 0 0 0;font-weight: bold;}
+    .k2_calendar_form dt *{width: 100%}
+    .k2_calendar_form textarea{min-height: 80px}
+    .k2_calendar_form [type=color]{width: 30px}
+    .k2_calendar_errors{padding-left: 10px;display: none}
+</style>
