--- a/View/Index/index.phtml
+++ b/View/Index/index.phtml
@@ -10,9 +10,11 @@
 <script type="text/javascript">
     var module_url = "<?php echo KumbiaPHP\View\View::app()->createUrl('K2/Calendar:') ?>";
     $(function(){
+        Date.prototype.toString = function(){
+            return $.fullCalendar.formatDate(this, 'yyyy-MM-dd HH:mm:ss');
+        }
         $("#calendario").fullCalendar({
             events: function(start, end, callback){
-                console.log(start)
                 $.get(module_url + 'event',{
                     start: start,
                     end: end
@@ -145,11 +147,12 @@
         }
         container.html('<p>' + errors.join('</p><p>') + '</p>').show(0).delay(5000).hide(0)
     }
+    
 </script>
 <style>
     .k2_calendar_form dd{margin: 10px 0 0 0;font-weight: bold;}
     .k2_calendar_form dt *{width: 100%}
     .k2_calendar_form textarea{min-height: 80px}
-    .k2_calendar_form [type=color]{width: 30px}
+    .k2_calendar_form [type=color]{width: 80px}
     .k2_calendar_errors{padding-left: 10px;display: none}
 </style>
