Se pasa la vista del calendario a un partial...
Con esto se abre la posibilidad de incluir el calendario en cualquier
parte de nuestra aplicación...

--- a/View/Index/index.phtml
+++ b/View/Index/index.phtml
@@ -1,158 +1,1 @@
-<?php Tag::css('calendar/fullcalendar') ?>
-<?php Tag::css('calendar/jquery-ui.custom.min') ?>
-<?php Tag::js('calendar/jquery-ui.custom.min') ?>
-<?php Tag::js('calendar/fullcalendar.min') ?>
-<?php KumbiaPHP\View\View::content(true) ?>
-<?php KumbiaPHP\View\View::content(true) ?>
-<h2>Probando el Calendario</h2>
-<div class="k2_calendar_errors ui-state-error ui-corner-all"></div>
-<div id="calendario"></div>
-<script type="text/javascript">
-    var module_url = "<?php echo KumbiaPHP\View\View::app()->createUrl('K2/Calendar:') ?>";
-    $(function(){
-        Date.prototype.toString = function(){
-            return $.fullCalendar.formatDate(this, 'yyyy-MM-dd HH:mm:ss');
-        }
-        $("#calendario").fullCalendar({
-            events: function(start, end, callback){
-                $.get(module_url + 'event',{
-                    start: start,
-                    end: end
-                }, callback, 'json')
-            },
-            selectable: true,
-            editable: true,
-            select:function( startDate, endDate, allDay){
-                showEvent(null, startDate, endDate);
-            },
-            eventClick:function(event){
-                showEvent(event)
-            },
-            eventResize:function(event, dayDelta){
-                var data = {};
-                for(attr in event){
-                    if(!$.isPlainObject(event[attr])){
-                        data[attr] = event[attr]                        
-                    }
-                }
-                saveEvent(event, {'event': data})
-            },
-            eventDrop:function(event, dayDelta){
-                var data = {};
-                for(attr in event){
-                    if(!$.isPlainObject(event[attr])){
-                        data[attr] = event[attr]                        
-                    }
-                }
-                saveEvent(event, {'event': data})
-            }
-        }) 
-    })
-    
-    function showEvent(event, startDate, endDate){
-        var id = (null != event) ? event.id : '';
-        var dialog = $('<div/>').load(module_url + 'event/form/' + id,function(){
-            dialog.find('form:first').on('submit',function(event){
-                event.preventDefault()
-                dialog.dialog('option','buttons').Guardar()
-            })
-            dialog.dialog({
-                title:'Registro de Evento',
-                width: 500,
-                modal: true,
-                buttons:{
-                    Guardar:function(){
-                        var data = dialog.find('form:first').serialize()
-                        saveEvent(event, data, dialog, function(){
-                            dialog.dialog('close')                            
-                        })
-                    },
-                    Cancelar:function(){
-                        dialog.dialog('close')
-                    },
-                    Remover:function(){
-                        deleteEvent(dialog.find('form:first #event_id').val(), dialog, function(){
-                            dialog.dialog('close')                            
-                        })
-                    }
-                },
-                close:function(){
-                    dialog.find('form:first').off()
-                    dialog.remove()
-                }
-            })
-            if (undefined != startDate && undefined != endDate){
-                dialog.find('form:first #event_start').val(startDate)
-                dialog.find('form:first #event_end').val(endDate)                
-            }
-        })
-    }
-    
-    function saveEvent(event, data, dialog, callbackSuccess)
-    {
-        $.post(module_url + 'event/save', data, function(json){
-            if(null == event){ 
-                var action = 'renderEvent'
-                event = json
-            }else{
-                var action = 'updateEvent' 
-                for(attr in json){
-                    event[attr] = json[attr]   
-                }
-            }
-            $("#calendario").fullCalendar(action, event)
-            if ($.isFunction(callbackSuccess)){
-                callbackSuccess()
-            }
-        }, 'json').error(function(error){
-            if(null != dialog && undefined != dialog){
-                showErrors(dialog.find('.k2_calendar_errors'), error.responseText)
-            }else{
-                showErrors($('.k2_calendar_errors'), error.responseText)
-            }
-        })
-    }
-    
-    function deleteEvent(id, dialog, callbackSuccess){
-        if(0 != id.length){            
-            $.getJSON(module_url + 'event/remove/' + id,{}, function(json){
-                $("#calendario").fullCalendar('removeEvents', id)
-                if ($.isFunction(callbackSuccess)){
-                    callbackSuccess()
-                }
-            }, 'json').error(function(error){
-                if(null != dialog && undefined != dialog){
-                    showErrors(dialog.find('.k2_calendar_errors'), error.responseText)
-                }else{
-                    showErrors($('.k2_calendar_errors'), error.responseText)
-                }
-                
-            })
-        }else{
-            if ($.isFunction(callbackSuccess)){
-                callbackSuccess()
-            }        
-        }
-    }
-    
-    function showErrors(container, error)
-    {
-        var error = $.parseJSON(error)
-        var errors = [];
-        errors.push(error.message)
-        if(undefined != error.errors){           
-            for (e in error.errors){
-                errors.push(error.errors[e])
-            }
-        }
-        container.html('<p>' + errors.join('</p><p>') + '</p>').show(0).delay(5000).hide(0)
-    }
-    
-</script>
-<style>
-    .k2_calendar_form dd{margin: 10px 0 0 0;font-weight: bold;}
-    .k2_calendar_form dt *{width: 100%}
-    .k2_calendar_form textarea{min-height: 80px}
-    .k2_calendar_form [type=color]{width: 80px}
-    .k2_calendar_errors{padding-left: 10px;display: none}
-</style>
+<?php \KumbiaPHP\View\View::partial('K2/Calendar:calendar') ?>
