Agregando comentario sobre la inclusión del del jquery entes de usar el partial

--- a/View/_shared/partials/calendar.phtml
+++ b/View/_shared/partials/calendar.phtml
@@ -1,4 +1,5 @@
 <?php
+//recordar que se debe incluir el jquery antes de usar el partial, es de suma importancia.
 Tag::css('calendar/fullcalendar');
 Tag::css('calendar/jquery-ui.custom.min');
 Tag::js('calendar/jquery-ui.custom.min');
