--- a/View/index/index.phtml
+++ b/View/index/index.phtml
@@ -1,1 +1,1 @@
-<?php \KumbiaPHP\View\View::partial('K2/Calendar:calendar', false, array('id' => 'mi_calendario')) ?>
+<?php \K2\View\View::partial('K2/Calendar:calendar', false, array('id' => 'mi_calendario')) ?>
