--- a/View/event/form.phtml
+++ b/View/event/form.phtml
@@ -1,5 +1,5 @@
 <div class="k2_calendar_form">    
-    <?php KumbiaPHP\View\View::content(true) ?>
+    <?php K2\View\View::content(true) ?>
     <?php echo $form->open() ?>
     <div class="k2_calendar_errors ui-state-error ui-corner-all"></div>
     <dl>
